--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.9",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "codelyzer": "^5.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-angular": "^1.0.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
