--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,6 @@ testem.log
 .DS_Store
 Thumbs.db
 
-/src/environments/environment.ts
-/src/environments/environment.prod.ts
+# ENV with sensitive API keys
+environment.ts
+environment.prod.ts
